04-k8s-secure-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-api
  namespace: portfolio
spec:
  replicas: 2
  selector:
    matchLabels: { app: secure-api }
  template:
    metadata:
      labels: { app: secure-api }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: api
          image: secure-api:lab
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 8000 }]
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
          resources:
            requests: { cpu: 50m, memory: 32Mi }
            limits: { cpu: 250m, memory: 128Mi }
          readinessProbe:
            httpGet: { path: /readyz, port: 8000 }
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: 8000 }
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: secure-api
  namespace: portfolio
spec:
  selector: { app: secure-api }
  ports: [{ port: 8000, targetPort: 8000 }]
